2003-10-21  Paul Eggert  <eggert@twinsun.com>

	* obstack.c: Merge from glibc.
	[defined _LIBC]: Include <obstack.h>, not "obstack.h".
	Add libc_hidden_def (_obstack_newchunk).
	(_obstack_free) [! defined _LIBC]: Remove.
	[defined _LIBC]: Make a strong alias from obstack_free, rather than
	a clone of the function body.
	(fputs) [defined _LIBC && defined USE_IN_LIBIO]: Remove.
	[defined _LIBC && !defined USE_IN_LIBIO]: Include <libio/iolibio.h>.

	* obstack.h: Indenting cleanup, to make it easier to merge with glibc.
	(obstack_grow, obstack_grow0): Remove unnecessary parentheses around
	arg to memcpy.

	* obstack.h (obstack_1grow_fast): Properly parenthesize arg.
	(obstack_ptr_grow_fast, obstack_int_grow_fast):
	Don't use lvalue casts, as GCC plans to remove support for them
	in GCC 3.5.  Reported by Joseph S. Meyers.  This bug
	was also present in the non-GCC version, indicating that this
	code had always been buggy and had never been widely used.
	(obstack_1grow, obstack_ptr_grow, obstack_int_grow, obstack_blank):
	Use the fast variant of each macro, rather than copying the
	definiens of the fast variant; that way, we'll be more likely to
	catch future bugs in the fast variants.

2003-10-20  Bruno Haible  <bruno@clisp.org>

	* wait-process.h: New file, from GNU gettext.
	* wait-process.c: New file, from GNU gettext.

2003-10-19  Jim Meyering  <jim@meyering.net>

	* vasnprintf.c (vasnprintf): Work around losing snprintf on HPUX 10.20.

2003-10-16  Paul Eggert  <eggert@twinsun.com>

	* getgroups.c: Include <errno.h>, <stdlib.h>.
	(getgroups): First arg is int, not size_t.
	Don't let 'free' mangle errno.

2003-10-16  Jim Meyering  <jim@meyering.net>

	* xmalloc.c: Include <string.h>, for declarations of memset and memcpy.

2003-10-15  Paul Eggert  <eggert@twinsun.com>

	* exclude.c: Do not include <inttypes.h> or <stdint.h>.
	(SIZE_MAX): Remove.
	(new_exclude, add_exclude_file): Initial size no longer needs to
	be a power of 2.